[gd_scene load_steps=2 format=3 uid="uid://ie58iig16g31"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_dafp6"]

[node name="Game Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dafp6")

[node name="end_text" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -520.0
offset_top = -168.0
offset_right = 521.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 41
bbcode_enabled = true
text = "[center]On the end of day [color=\"red\"]DAY_VALUE[/color] your hunger still there ([color=\"red\"]HUNGER_VALUE[/color]), and you had an unpleasent day of work next morning. You decided that gambling was bad to your stomach and used the money on cooking classes.[/center]"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.417
anchor_top = 0.783
anchor_right = 0.583
anchor_bottom = 0.89
offset_left = 0.115967
offset_top = 0.115967
offset_right = -0.116028
offset_bottom = -0.220032
grow_horizontal = 2
grow_vertical = 2

[node name="restart" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Restart
"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
